# AI-Fraud-Detection-System-

./: .gitignore  README.md  docker-compose.yml
backend/: fraud_detection.db  main.py  pyproject.toml  requirements.txt
backend/core/: database.py  security.py
backend/data/: KYC_Policy_Rulebook_Dummy.txt
backend/models/: schema.py
backend/services/: fraud_detector.py  layout_analyzer.py  ocr_service.py  rag_service.py  scoring_engine.py
backend/vector_db/: chroma.sqlite3
docker/: backend.Dockerfile  frontend.Dockerfile
frontend/: app.py  pyproject.toml  requirements.txt
