[tool.poetry]
name = "frontend"
version = "0.1.0"
description = "AI Document Fraud Detection Frontend"
authors = ["AI Assistant <assistant@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.24.0"
requests = "^2.31.0"
pillow = "^10.0.0"
numpy = "^1.24.0"
pandas = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
